<project xmlns="http://maven.apache.org/POM/4.0.0"
	xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>
	<groupId>com.paymate</groupId>
	<artifactId>api-automation-zerocode-framework</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>PaymateRestAPIAutomation</name>
	<description>This project is for testing REST API for Paymate</description>
	<properties>
		<zerocode-tdd.version>1.3.35</zerocode-tdd.version>
		<java.version>17</java.version>
		<plugin.source.version>3.0.0</plugin.source.version>
		<micro-simulator.version>1.1.8</micro-simulator.version>
		<junit.jupiter.version>5.4.1</junit.jupiter.version>
		<junit.vintage.version>5.4.1</junit.vintage.version>
		<commons-lang3>3.12.0</commons-lang3>
		<poi>5.0.0</poi>
		<poi-ooxml>5.0.0</poi-ooxml>
		<jersey-client>1.8</jersey-client>
		<spring-boot>1.0.0.RELEASE</spring-boot>
		<spring-web>5.3.22</spring-web>
		<spring-boot-autoconfigure>2.7.2</spring-boot-autoconfigure>
		<joinery-dataframe>1.10</joinery-dataframe>
		<json>20220924</json>
		<json-simple>1.1.1</json-simple>
		<junit-platform-surefire-provider>1.3.2</junit-platform-surefire-provider>
	</properties>
	<dependencies>
		<dependency>
			<groupId>org.jsmart</groupId>
			<artifactId>zerocode-tdd</artifactId>
			<version>${zerocode-tdd.version}</version>
		</dependency>
		<!-- For Performance Testing -->
		<dependency>
			<groupId>org.jsmart</groupId>
			<artifactId>zerocode-tdd-jupiter</artifactId>
			<version>${zerocode-tdd.version}</version> <!-- or higher -->
		</dependency>
		<dependency>
			<groupId>org.junit.jupiter</groupId>
			<artifactId>junit-jupiter</artifactId>
			<version>${junit.jupiter.version}</version>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.junit.vintage</groupId>
			<artifactId>junit-vintage-engine</artifactId>
			<version>${junit.vintage.version}</version>
		</dependency>
		<dependency>
			<groupId>org.apache.commons</groupId>
			<artifactId>commons-lang3</artifactId>
			<version>${commons-lang3}</version>
		</dependency>
		<dependency>
			<groupId>org.apache.poi</groupId>
			<artifactId>poi</artifactId>
			<version>${poi}</version>
		</dependency>
		<dependency>
			<groupId>org.apache.poi</groupId>
			<artifactId>poi-ooxml</artifactId>
			<version>${poi-ooxml}</version>
		</dependency>
		<dependency>
			<groupId>com.sun.jersey</groupId>
			<artifactId>jersey-client</artifactId>
			<version>${jersey-client}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot</artifactId>
			<version>${spring-boot}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework</groupId>
			<artifactId>spring-web</artifactId>
			<version>${spring-web}</version>
		</dependency>
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-autoconfigure</artifactId>
			<version>${spring-boot-autoconfigure}</version>
		</dependency>
		<dependency>
			<groupId>sh.joinery</groupId>
			<artifactId>joinery-dataframe</artifactId>
			<version>${joinery-dataframe}</version>
		</dependency>
		<dependency>
			<groupId>org.json</groupId>
			<artifactId>json</artifactId>
			<version>${json}</version>
		</dependency>
		<dependency>
			<groupId>com.googlecode.json-simple</groupId>
			<artifactId>json-simple</artifactId>
			<version>${json-simple}</version>
		</dependency>
		<dependency>
			<groupId>org.junit.platform</groupId>
			<artifactId>junit-platform-surefire-provider</artifactId>
			<version>${junit-platform-surefire-provider}</version>
		</dependency>
	</dependencies>
	<build>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<version>3.8.1</version>
				<configuration>
					<source>${java.version}</source>
					<target>${java.version}</target>
				</configuration>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-surefire-plugin</artifactId>
				<version>3.0.0-M7</version>
				<dependencies>
					<dependency>
						<groupId>org.junit.jupiter</groupId>
						<artifactId>junit-jupiter-engine</artifactId>
						<version>5.4.0</version>
					</dependency>
				</dependencies>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-source-plugin</artifactId>
				<version>${plugin.source.version}</version>
				<executions>
					<execution>
						<id>attach-sources</id>
						<goals>
							<goal>jar</goal>
						</goals>
					</execution>
				</executions>
			</plugin>
		</plugins>
	</build>
	<profiles>
		<profile>
			<id>allInOne-tests</id>
			<build>
				<plugins>
					<plugin>
						<groupId>org.apache.maven.plugins</groupId>
						<artifactId>maven-surefire-plugin</artifactId>
						<version>2.19.1</version>
						<configuration>
							<includes>
								<include>**/BusinessTest*</include>
							</includes>
							<argLine>
								--add-opens=java.base/java.lang=ALL-UNNAMED
							</argLine>
						</configuration>
					</plugin>
				</plugins>
			</build>
		</profile>
	</profiles>
</project>